first new ssscommit

--- a/package.json
+++ b/package.json
@@ -43,5 +43,5 @@
     "postcss-cli": "^7.1.1",
     "tailwindcss": "^1.4.6"
   },
-  "homepage": "https://github.com/andreagulp/mars-weather-app.git"
+  "homepage": "https://andreagulp.github.io/mars-weather"
 }
